Fix: prevent flickering on hover effect

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -324,10 +324,6 @@
   transition: transform $transition-base;
   will-change: transform;
 
-  &:hover {
-    transform: translateY(-20px);
-  }
-
   .imageContainer {
     position: relative;
     height: 100%;
